fix(navbar): Adjust margin-left for ZodiacSignList button for better alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header{
     color: black;
     font-size: 15px;
     padding: 8px 12px;
-    margin-left: 800px;
+    margin-left: 40px;
     border-radius: 5px;
     background-color: rgb(227, 227, 227);
     transition: background-color 0.3s ease;
